MB-61394: Add getStatsTime histogram for Magma::GetStats timings

The GetStatsTimeHisto histogram in MagmaHistogramStats records
the time taken by Magma::GetStats. This will help debug issues
caused by Magma::GetStats calls being slow.

Change-Id: Iab6b4dd780db0498feffc6622387eb32c3be8b55
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/208222
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>
Tested-by: Jim Walker <jim@couchbase.com>