engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc
@@ -3694,6 +3694,8 @@ void MagmaKVStore::addTimingStats(const AddStatFn& add_stat,
                       histoStats.FlushWaitTimeHisto,
                       add_stat,
                       c);
+    add_prefixed_stat(
+            prefix, "getStatsTime", histoStats.GetStatsTimeHisto, add_stat, c);
     add_prefixed_stat(prefix,
                       "keyWriteBlockingCompactTime",
                       histoStats.KeyStats.WriteBlockingCompactTimeHisto,
